build/log/idf_py_stdout_output_2790369
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/matthewf/esp/gnss_pss_processing/build/bootloader/esp-idf/esptool_py && /home/matthewf/.espressif/python_env/idf5.5_py3.12_env/bin/python /home/matthewf/skyworks/prep/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/matthewf/esp/gnss_pss_processing/build/bootloader/bootloader.bin
Bootloader binary size 0x5220 bytes. 0x2de0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/matthewf/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20241119/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-1050-gb5ac4fbdf9\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/matthewf/esp/gnss_pss_processing/build/config -I/home/matthewf/skyworks/prep/esp-idf/components/newlib/platform_include -I/home/matthewf/skyworks/prep/esp-idf/components/freertos/config/include -I/home/matthewf/skyworks/prep/esp-idf/components/freertos/config/include/freertos -I/home/matthewf/skyworks/prep/esp-idf/components/freertos/config/riscv/include -I/home/matthewf/skyworks/prep/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/matthewf/skyworks/prep/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/matthewf/skyworks/prep/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/matthewf/skyworks/prep/esp-idf/components/freertos/esp_additions/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/include/soc -I/home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/include/soc/esp32c3 -I/home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/dma/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/ldo/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/debug_probe/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/port/esp32c3/. -I/home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/port/esp32c3/include -I/home/matthewf/skyworks/prep/esp-idf/components/heap/include -I/home/matthewf/skyworks/prep/esp-idf/components/heap/tlsf -I/home/matthewf/skyworks/prep/esp-idf/components/log/include -I/home/matthewf/skyworks/prep/esp-idf/components/soc/include -I/home/matthewf/skyworks/prep/esp-idf/components/soc/esp32c3 -I/home/matthewf/skyworks/prep/esp-idf/components/soc/esp32c3/include -I/home/matthewf/skyworks/prep/esp-idf/components/soc/esp32c3/register -I/home/matthewf/skyworks/prep/esp-idf/components/hal/platform_port/include -I/home/matthewf/skyworks/prep/esp-idf/components/hal/esp32c3/include -I/home/matthewf/skyworks/prep/esp-idf/components/hal/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_rom/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_rom/esp32c3/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_rom/esp32c3/include/esp32c3 -I/home/matthewf/skyworks/prep/esp-idf/components/esp_rom/esp32c3 -I/home/matthewf/skyworks/prep/esp-idf/components/esp_common/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_system/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_system/port/soc -I/home/matthewf/skyworks/prep/esp-idf/components/esp_system/port/include/riscv -I/home/matthewf/skyworks/prep/esp-idf/components/esp_system/port/include/private -I/home/matthewf/skyworks/prep/esp-idf/components/riscv/include -I/home/matthewf/skyworks/prep/esp-idf/components/spi_flash/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_uart/include -I/home/matthewf/skyworks/prep/esp-idf/components/driver/deprecated -I/home/matthewf/skyworks/prep/esp-idf/components/driver/i2c/include -I/home/matthewf/skyworks/prep/esp-idf/components/driver/touch_sensor/include -I/home/matthewf/skyworks/prep/esp-idf/components/driver/twai/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_pm/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_ringbuf/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_gpio/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_pcnt/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_gptimer/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_spi/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_mcpwm/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_ana_cmpr/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_i2s/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_sdmmc/include -I/home/matthewf/skyworks/prep/esp-idf/components/sdmmc/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_sdspi/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_sdio/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_dac/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_rmt/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_tsens/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_sdm/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_i2c/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_ledc/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_parlio/include -I/home/matthewf/skyworks/prep/esp-idf/components/esp_driver_usb_serial_jtag/include -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/matthewf/esp/gnss_pss_processing=. -fmacro-prefix-map=/home/matthewf/skyworks/prep/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/matthewf/esp/gnss_pss_processing/main/main.c
In file included from /home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/include/esp_intr_alloc.h:12,
                 from /home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/include/esp_cpu.h:21,
                 from /home/matthewf/skyworks/prep/esp-idf/components/esp_hw_support/include/spinlock.h:11,
                 from /home/matthewf/skyworks/prep/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos/portmacro.h:65,
                 from /home/matthewf/skyworks/prep/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/portable.h:57,
                 from /home/matthewf/skyworks/prep/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:69,
                 from /home/matthewf/esp/gnss_pss_processing/main/main.c:10:
/home/matthewf/esp/gnss_pss_processing/main/main.c: In function 'configure_pps':
/home/matthewf/esp/gnss_pss_processing/main/main.c:96:46: error: 'ESP_INTR_FLAG_DEFAULT' undeclared (first use in this function); did you mean 'ESP_INTR_FLAG_LEVEL3'?
   96 |     ESP_ERROR_CHECK(gpio_install_isr_service(ESP_INTR_FLAG_DEFAULT));
      |                                              ^~~~~~~~~~~~~~~~~~~~~
/home/matthewf/skyworks/prep/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/home/matthewf/esp/gnss_pss_processing/main/main.c:96:46: note: each undeclared identifier is reported only once for each function it appears in
   96 |     ESP_ERROR_CHECK(gpio_install_isr_service(ESP_INTR_FLAG_DEFAULT));
      |                                              ^~~~~~~~~~~~~~~~~~~~~
/home/matthewf/skyworks/prep/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
ninja: build stopped: subcommand failed.
